--- a/qs_pers/views/views.xml
+++ b/qs_pers/views/views.xml
@@ -75,9 +75,14 @@
                 <field name="payment_term_id" position="attributes">
                     <attribute name="readonly">1</attribute>
                 </field>
-<!--                <field name="pricelist_id" position="attributes">-->
-<!--                    <attribute name="readonly">1</attribute>-->
-<!--                </field>-->
+                <field name="pricelist_id" position="after">
+                    <field name="compute_field_sale" invisible="1"/>
+                </field>
+                <field name="pricelist_id" position="attributes">
+                    <attribute name="attrs">{'readonly': [('compute_field_sale', '=', True)]}</attribute>
+
+                </field>
+
                 <xpath expr="//page[@name='other_information']" position="attributes">
                     <attribute name="groups">sales_team.group_sale_manager</attribute>
                 </xpath>
