--- a/qs_pers_pos/views/templates.xml
+++ b/qs_pers_pos/views/templates.xml
@@ -1,22 +1,43 @@
+<?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <!--<data>
-        <template id="listing">
-          <ul>
-            <li t-foreach="objects" t-as="object">
-              <a t-attf-href="#{ root }/objects/#{ object.id }">
-                <t t-esc="object.display_name"/>
-              </a>
-            </li>
-          </ul>
-        </template>
-        <template id="object">
-          <h1><t t-esc="object.display_name"/></h1>
-          <dl>
-            <t t-foreach="object._fields" t-as="field">
-              <dt><t t-esc="field"/></dt>
-              <dd><t t-esc="object[field]"/></dd>
-            </t>
-          </dl>
-        </template>
-    </data>-->
+    <data>
+        <record id="pos_lock_mode_pos_config_inherit" model="ir.ui.view">
+            <field name="name">pos.config.form.pos.sale.valisoa</field>
+            <field name="model">pos.config</field>
+            <field name="inherit_id" ref="point_of_sale.pos_config_view_form"/>
+            <field name="arch" type="xml">
+                <sheet position="inside">
+                    <h2>Lock price or discount</h2>
+                    <div class="row mt16 o_settings_container" id="pos_lock_price_discount">
+                        <div class="col-xs-12 col-md-6 o_setting_box">
+                            <div class="o_setting_left_pane">
+                                <field name="lock_price"/>
+                            </div>
+                            <div class="o_setting_right_pane">
+                                <label for="lock_price"/>
+                                <br/>
+                                <label for="price_password" attrs="{'invisible':[('lock_price', '=', False)]}"/>
+                                <field name="price_password"
+                                       attrs="{'invisible':[('lock_price', '=', False)], 'required':[('lock_price', '=', True)]}"
+                                       password="True"/>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-md-6 o_setting_box">
+                            <div class="o_setting_left_pane">
+                                <field name="lock_discount"/>
+                            </div>
+                            <div class="o_setting_right_pane">
+                                <label for="lock_discount"/>
+                                <br/>
+                                <label for="discount_password" attrs="{'invisible':[('lock_price', '=', False)]}"/>
+                                <field name="discount_password"
+                                       attrs="{'invisible':[('lock_discount', '=', False)], 'required':[('lock_discount', '=', True)]}"
+                                       password="True"/>
+                            </div>
+                        </div>
+                    </div>
+                </sheet>
+            </field>
+        </record>
+    </data>
 </odoo>
