--- a/qs_pers/report/report_with_price.xml
+++ b/qs_pers/report/report_with_price.xml
@@ -115,7 +115,7 @@
 
 
                     <table class="table"
-                            style="font-size:13pt">
+                           style="font-size:13pt">
                         <!-- In case we want to repeat the header, remove "display: table-row-group" -->
                         <thead style="display: table-row-group">
                             <tr>
@@ -184,8 +184,36 @@
                                 <table class="table table-sm">
                                     <!-- Tax totals -->
                                     <t t-set="tax_totals" t-value="json.loads(o.tax_totals_json)"/>
-                                    <t t-call="account.document_tax_totals"/>
+                                    <t t-foreach="tax_totals['subtotals']" t-as="subtotal">
+                                        <tr class="border-black o_subtotal">
+                                            <td><strong t-esc="subtotal['name']"/></td>
+
+                                            <td class="text-right">
+                                                <span
+                                                        t-att-class="oe_subtotal_footer_separator"
+                                                        t-esc="subtotal['amount']"
+                                                />
+                                            </td>
+                                        </tr>
+
+                                        <t t-set="subtotal_to_show" t-value="subtotal['name']"/>
+                                        <t t-call="account.tax_groups_totals"/>
+                                    </t>
+
+                                    <!--Total amount with all taxes-->
+                                    <tr class="border-black o_total">
+                                        <td><strong>Total</strong></td>
+                                        <td class="text-right">
+                                            <span t-esc="tax_totals['amount_total']"/>
+                                            <span t-esc="o.currency_id.name"/>
+
+                                        </td>
+                                    </tr>
+
                                 </table>
+
+                                <t t-set="tax_total_fmg" t-value="o.amount_total * 5"/>
+                                <p class="text-right"><t t-out="tax_total_fmg"/>FMG</p>
                             </div>
                         </div>
                     </div>
