--- a/qs_pers/report/report_with_price.xml
+++ b/qs_pers/report/report_with_price.xml
@@ -115,7 +115,7 @@
 
 
                     <table class="table"
-                           style="font-size:13pt">
+                           style="font-size:15pt">
                         <!-- In case we want to repeat the header, remove "display: table-row-group" -->
                         <thead style="display: table-row-group">
                             <tr>
@@ -152,7 +152,7 @@
                                             <td name="td_quantity" class="text-left">
                                                 <!--<span t-field="line.product_uom_qty"/>
                                                 <span t-field="line.price_unit"/>-->
-                                                <span t-field="line.price_subtotal"/>
+                                                <span style="font-weight: bold;" t-field="line.price_subtotal"/>
 
                                             </td>
                                             <!-- <td name="td_priceunit" class="text-right">
@@ -186,7 +186,7 @@
                                     <t t-set="tax_totals" t-value="json.loads(o.tax_totals_json)"/>
                                     <t t-foreach="tax_totals['subtotals']" t-as="subtotal">
                                         <tr class="border-black o_subtotal">
-                                            <td><strong t-esc="subtotal['name']"/></td>
+                                            <td><strong>Total HT</strong></td>
 
                                             <td class="text-right">
                                                 <span
@@ -205,15 +205,15 @@
                                         <td><strong>Total</strong></td>
                                         <td class="text-right">
                                             <span t-esc="tax_totals['amount_total']"/>
-                                            <span t-esc="o.currency_id.name"/>
+<!--                                            <span t-esc="o.currency_id.name"/>-->
 
                                         </td>
                                     </tr>
 
                                 </table>
 
-                                <t t-set="tax_total_fmg" t-value="o.amount_total * 5"/>
-                                <p class="text-right"><t t-out="tax_total_fmg"/>FMG</p>
+                               <!-- <t t-set="tax_total_fmg" t-value="o.amount_total * 5"/>
+                                <p class="text-right"><t t-out="tax_total_fmg"/>FMG</p>-->
                             </div>
                         </div>
                     </div>
