--- a/qs_pers/report/report_with_price.xml
+++ b/qs_pers/report/report_with_price.xml
@@ -152,7 +152,7 @@
                                             <td name="td_quantity" class="text-left">
                                                 <!--<span t-field="line.product_uom_qty"/>
                                                 <span t-field="line.price_unit"/>-->
-                                                <span style="font-weight: bold;" t-field="line.price_subtotal"/>
+                                                <span style="font-weight: bold;" t-field="line.price_total"/>
 
                                             </td>
                                             <!-- <td name="td_priceunit" class="text-right">
