--- a/qs_pers/report/report_with_price.xml
+++ b/qs_pers/report/report_with_price.xml
@@ -72,9 +72,14 @@
                             </td>
                             <td style="vertical-align:bottom;padding-left:3pt">:</td>
                             <td style="text-align:right;vertical-align:bottom;padding-right:5pt">
-                                <t t-if="o.pricelist_id.id == 1">
-
+                                <t t-if="o.payment_term_id.name == 'IMMEDIAT'">
                                     <span>COMPTANT</span>
+                                    <span>TETO</span>
+                                </t>
+
+                                <t t-elif="o.payment_term_id">
+                                    <span>COMPTANT</span>
+                                    <span>TSISY</span>
                                 </t>
 
                                 <t t-else="">
@@ -142,22 +147,28 @@
                                         </tr>
 
                                         <tr>
-                                            <td name="td_default_code" class="text-left" colspan="2">
+                                            <td name="td_default_code" class="text-left">
                                                 <span t-field="line.product_id.default_code"/>
-                                                <span>|</span>
-                                                <span t-field="line.product_uom_qty"/>
-                                                <span>x</span>
-                                                <span t-field="line.price_unit"/>
+
                                             </td>
                                             <td name="td_quantity" class="text-left">
                                                 <!--<span t-field="line.product_uom_qty"/>
                                                 <span t-field="line.price_unit"/>-->
-                                                <span style="font-weight: bold;" t-field="line.price_total"/>
+                                                <span t-field="line.product_uom_qty"
+                                                      t-options='{"widget": "float", "precision":0}'/>
+                                                <span>x</span>
+                                                <span t-field="line.price_unit"
+                                                      t-options='{"widget": "float", "precision":0}'/>
+
 
                                             </td>
-                                            <!-- <td name="td_priceunit" class="text-right">
-                                                 <span t-field="line.price_subtotal"/>
-                                             </td>-->
+                                            <td name="td_priceunit" class="text-right">
+                                                <span style="font-weight: bold;" t-field="line.price_total"
+                                                      t-options='{"widget": "float","precision":0}'
+                                                />
+
+
+                                            </td>
                                         </tr>
 
 
@@ -189,10 +200,10 @@
                                             <td><strong>Total HT</strong></td>
 
                                             <td class="text-right">
-                                                <span
+                                                <strong><span
                                                         t-att-class="oe_subtotal_footer_separator"
                                                         t-esc="subtotal['amount']"
-                                                />
+                                                /></strong>
                                             </td>
                                         </tr>
 
@@ -203,22 +214,38 @@
                                     <!--Total amount with all taxes-->
                                     <tr class="border-black o_total">
                                         <td><strong>Total</strong></td>
-                                        <td class="text-right">
-                                            <span t-esc="tax_totals['amount_total']"/>
-<!--                                            <span t-esc="o.currency_id.name"/>-->
+                                        <td class="text-left">
+                                            <strong><span t-esc="tax_totals['amount_total']"
+                                                          t-options='{"widget": "float", "precision":0}'
+
+                                            />
+                                                <span t-esc="o.currency_id.name"
+                                                /></strong>
+
+                                        </td>
+                                    </tr>
+                                    <tr class="border-black o_total">
+                                        <td><strong>Total FMG</strong></td>
+                                        <td class="text-left">
+                                            <strong><span t-esc="tax_totals['amount_total']*5"
+                                                          t-options='{"widget": "float", "precision":0}'
+
+                                            />
+                                                <span>FMG</span></strong>
+
 
                                         </td>
                                     </tr>
 
                                 </table>
 
-                               <!-- <t t-set="tax_total_fmg" t-value="o.amount_total * 5"/>
-                                <p class="text-right"><t t-out="tax_total_fmg"/>FMG</p>-->
+                                <!-- <t t-set="tax_total_fmg" t-value="o.amount_total * 5"/>
+                                 <p class="text-right"><t t-out="tax_total_fmg"/>FMG</p>-->
                             </div>
                         </div>
                     </div>
 
-                    <p t-field="o.note"/>
+                    <p t-field="o.note_nda"/>
                 </div>
             </div>
         </template>
