--- a/qs_pers/report/report_with_price.xml
+++ b/qs_pers/report/report_with_price.xml
@@ -72,7 +72,7 @@
                             </td>
                             <td style="vertical-align:bottom;padding-left:3pt">:</td>
                             <td style="text-align:right;vertical-align:bottom;padding-right:5pt">
-                                <t t-if="o.payment_term_id.name == 'IMMEDIAT'">
+                               <!-- <t t-if="o.payment_term_id.name == 'IMMEDIAT'">
                                     <span>COMPTANT</span>
                                     <span>TETO</span>
                                 </t>
@@ -84,7 +84,7 @@
 
                                 <t t-else="">
                                     <span>CREDIT</span>
-                                </t>
+                                </t>-->
                             </td>
                         </tr>
                     </table>
