--- a/qs_pers/report/report_with_price.xml
+++ b/qs_pers/report/report_with_price.xml
@@ -239,10 +239,11 @@
 
                                 </table>
 
-                                
+
                             </div>
                         </div>
                     </div>
+<!--                    Commentaire stage-->
 
                     <p t-field="o.note_nda"/>
                 </div>
