--- a/pos_report_session_summary/views/report_session_summary.xml
+++ b/pos_report_session_summary/views/report_session_summary.xml
@@ -275,9 +275,9 @@
                                             <span t-field="statement.payment_ref"/>
                                         </td>
                                         <td class="text-right">
-                                            <span
+                                            <!--<span
                                                     t-out="Zoly"
-                                            />
+                                            />-->
                                         </td>
                                         <td class="text-right">
                                             <span
