--- a/qs_pers/report/report_with_price.xml
+++ b/qs_pers/report/report_with_price.xml
@@ -244,7 +244,7 @@
                         </div>
                     </div>
                     <p>
-                        <strong>Arrêter la facture à la somme de:</strong>
+                        <strong>Arrêtée la facture à la somme de:</strong>
                         <span t-esc="o.get_amount_letter()"/>
                     </p>
 
