--- a/pos_report_session_summary/views/report_session_summary.xml
+++ b/pos_report_session_summary/views/report_session_summary.xml
@@ -104,7 +104,7 @@
                                         <th class="text-right">
                                             <strong>Facture lié</strong>
                                         </th>
-                                        <th class="text-right">
+                                        <th class="text-center">
                                             <strong>Total</strong>
                                         </th>
                                         <th class="text-right">
@@ -143,7 +143,7 @@
                                             <td>
                                                 <span t-field="statement.partner_id.name"/>
                                             </td>
-                                            <td class="text-right">
+                                            <td class="text-left" style="font-size:10pt;">
                                                 <span
                                                         t-field="statement.date_order"
                                                 />
@@ -153,7 +153,7 @@
                                                         t-field="statement.account_move.name"
                                                 />
                                             </td>
-                                            <td class="text-right">
+                                            <td class="text-left" style="width: 15%">
                                                 <span
                                                         t-field="statement.amount_total"
                                                         t-field-options='{"widget": "monetary", "display_currency": "statement.currency_id.name"}'
