--- a/qs_pers/report/report_with_price.xml
+++ b/qs_pers/report/report_with_price.xml
@@ -54,7 +54,7 @@
                         <tr>
                             <td style="vertical-align:bottom;">
                                 <t t-if="not (env.context.get('proforma', False) or is_pro_forma)">
-                                    <span t-if="o.state not in ['draft','sent']">Commande N°</span>
+                                    <span t-if="o.state not in ['draft','sent']">Cmd N°</span>
                                     <span t-if="o.state in ['draft','sent']">Devis N°</span>
                                 </t>
                                 <t t-if="env.context.get('proforma', False) or is_pro_forma">
@@ -73,17 +73,10 @@
                             <td style="vertical-align:bottom;padding-left:3pt">:</td>
                             <td style="text-align:right;vertical-align:bottom;padding-right:5pt">
                                 <t t-if="o.payment_term_id.name == 'IMMEDIAT'">
-                                    <!--<span>COMPTANT</span>
-                                    <span>TETO</span>-->
+                                    <span>COMPTANT</span>
                                 </t>
-
-                                <t t-elif="o.payment_term_id">
-                                    <!--<span>COMPTANT</span>
-                                    <span>TSISY</span>-->
-                                </t>
-
                                 <t t-else="">
-                                    <!--<span>CREDIT</span>-->
+                                    <span>CREDIT</span>
                                 </t>
                             </td>
                         </tr>
@@ -146,12 +139,12 @@
                                             <td name="td_name" colspan="3"><span t-field="line.product_id.name"/></td>
                                         </tr>
 
-                                        <tr>
-                                            <td name="td_default_code" class="text-left">
+                                        <tr style="font-size: 10">
+                                            <td name="td_default_code" class="text-left" style="width: 20%">
                                                 <span t-field="line.product_id.default_code"/>
 
                                             </td>
-                                            <td name="td_quantity" class="text-left">
+                                            <td name="td_quantity" class="text-left" style="width: 40%">
                                                 <!--<span t-field="line.product_uom_qty"/>
                                                 <span t-field="line.price_unit"/>-->
                                                 <span t-field="line.product_uom_qty"
@@ -162,7 +155,7 @@
 
 
                                             </td>
-                                            <td name="td_priceunit" class="text-right">
+                                            <td name="td_priceunit" class="text-right" style="width: 40%">
                                                 <span style="font-weight: bold;" t-field="line.price_total"
                                                       t-options='{"widget": "float","precision":0}'
                                                 />
