--- a/qs_pers/report/report_with_price.xml
+++ b/qs_pers/report/report_with_price.xml
@@ -139,7 +139,7 @@
                                             <td name="td_name" colspan="3"><span t-field="line.product_id.name"/></td>
                                         </tr>
 
-                                        <tr style="font-size: 10">
+                                        <tr style="font-size: 10pt">
                                             <td name="td_default_code" class="text-left" style="width: 20%">
                                                 <span t-field="line.product_id.default_code"/>
 
@@ -152,8 +152,6 @@
                                                 <span>x</span>
                                                 <span t-field="line.price_unit"
                                                       t-options='{"widget": "float", "precision":0}'/>
-
-
                                             </td>
                                             <td name="td_priceunit" class="text-right" style="width: 40%">
                                                 <span style="font-weight: bold;" t-field="line.price_total"
