--- a/qs_pers/report/report_with_price.xml
+++ b/qs_pers/report/report_with_price.xml
@@ -139,7 +139,7 @@
                                             <td name="td_name" colspan="3"><span t-field="line.product_id.name"/></td>
                                         </tr>
 
-                                        <tr style="font-size: 10pt">
+                                        <tr style="font-size: 12pt">
                                             <td name="td_default_code" class="text-left" style="width: 20%">
                                                 <span t-field="line.product_id.default_code"/>
 
@@ -194,12 +194,40 @@
                                                 <strong><span
                                                         t-att-class="oe_subtotal_footer_separator"
                                                         t-esc="subtotal['amount']"
+                                                        t-options='{"widget": "float", "precision":0}'
                                                 /></strong>
                                             </td>
                                         </tr>
 
                                         <t t-set="subtotal_to_show" t-value="subtotal['name']"/>
-                                        <t t-call="account.tax_groups_totals"/>
+                                        <t t-foreach="tax_totals['groups_by_subtotal'][subtotal_to_show]"
+                                           t-as="amount_by_group">
+                                            <tr>
+                                                <t t-if="len(tax_totals['groups_by_subtotal'][subtotal_to_show]) > 1">
+                                                    <td>
+                                                        <span t-esc="amount_by_group['tax_group_name']"/>
+                                                        <span class="text-nowrap"> on
+                                                            <t t-esc="amount_by_group['formatted_tax_group_base_amount']"
+                                                               t-options='{"widget": "float", "precision":0}'/>
+                                                        </span>
+                                                    </td>
+                                                    <td class="text-right o_price_total">
+                                                        <span class="text-nowrap"
+                                                              t-esc="amount_by_group['formatted_tax_group_amount']"
+                                                              t-options='{"widget": "float", "precision":0}'/>
+                                                    </td>
+                                                </t>
+                                                <t t-else="">
+                                                    <td><span class="text-nowrap"
+                                                              t-esc="amount_by_group['tax_group_name']"/></td>
+                                                    <td class="text-right o_price_total">
+                                                        <span class="text-nowrap"
+                                                              t-esc="amount_by_group['formatted_tax_group_amount']"
+                                                        />
+                                                    </td>
+                                                </t>
+                                            </tr>
+                                        </t>
                                     </t>
 
                                     <!--Total amount with all taxes-->
