--- a/hrsft_facture_montant_lettres_qweb/views/report_invoice.xml
+++ b/hrsft_facture_montant_lettres_qweb/views/report_invoice.xml
@@ -96,7 +96,7 @@
                 <t t-foreach="lines" t-as="line">
 
                     <t t-if="line.product_id.id == 2">
-                        <t t-set="remise" t-value="line.price_subtotal"/>
+                        <t t-set="remise" t-value="line.price_total"/>
                     </t>
 
                 </t>
