--- a/hrsft_facture_montant_lettres_qweb/views/report_invoice.xml
+++ b/hrsft_facture_montant_lettres_qweb/views/report_invoice.xml
@@ -103,7 +103,7 @@
                 <tr t-if="remise != 0">
                     <td><strong>Remise % :</strong></td>
                     <td class="text-right">
-                        <t t-set="remiseenpers" t-value="(-100)*remise/(remise + o.amount_total)"/>
+                        <t t-set="remiseenpers" t-value="(-100)*remise/((-1)*remise + o.amount_total)"/>
                         <t t-out="remiseenpers" t-options='{"widget": "float", "precision":2}'/>
                     </td>
 
