--- a/hrsft_facture_montant_lettres_qweb/views/report_invoice.xml
+++ b/hrsft_facture_montant_lettres_qweb/views/report_invoice.xml
@@ -63,27 +63,69 @@
                 </h6>
             </xpath>
 
-            <xpath expr="//div[@id='total']" position="replace" >
-                <div class="col-6">
-                    <strong>Arrêtée la facture à la somme de:</strong>
-                    <span t-esc="o.get_amount_letter()"/>
+            <xpath expr="//div[@id='total']" position="replace">
+                <div id="total" class="row">
+                    <div class="col-6">
+                        <strong>Arrêté à la somme de : </strong>
+                        <span t-esc="o.get_amount_letter()"/>
+                    </div>
+                    <div class="col-6" >
+                        <table class="table table-sm" style="page-break-inside: avoid;">
+
+                            <!--Tax totals-->
+                            <t t-set="tax_totals" t-value="json.loads(o.tax_totals_json)"/>
+                            <t t-call="account.document_tax_totals"/>
+
+                            <!--Payments-->
+                            <t t-if="print_with_payments">
+                                <t t-if="o.payment_state != 'invoicing_legacy'">
+                                    <t t-set="payments_vals" t-value="o.sudo()._get_reconciled_info_JSON_values()"/>
+                                    <t t-foreach="payments_vals" t-as="payment_vals">
+                                        <tr>
+                                            <td>
+                                                <i class="oe_form_field text-right oe_payment_label">Paid on <t
+                                                        t-esc="payment_vals['date']"
+                                                        t-options='{"widget": "date"}'/></i>
+                                            </td>
+                                            <td class="text-right">
+                                                <span t-esc="payment_vals['amount']"
+                                                      t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
+                                            </td>
+                                        </tr>
+                                    </t>
+                                    <t t-if="len(payments_vals) > 0">
+                                        <tr class="border-black">
+                                            <td><strong>Amount Due</strong></td>
+                                            <td class="text-right">
+                                                <span t-field="o.amount_residual"/>
+                                            </td>
+                                        </tr>
+                                    </t>
+                                </t>
+                            </t>
+                        </table>
+                    </div>
                 </div>
+
             </xpath>
 
-            <xpath expr="//p[@name='incoterm']" position="before">
+            <xpath expr="//div[@class='clearfix']" position="after">
                 <div class="row">
                     <div class="col-4">
-                        <strong><span>Le client</span></strong>
+                        <strong><span>Le client <br/><br/></span></strong>
+
 
                     </div>
                     <div class="col-4">
-                        <span></span>
+                        <span><br/><br/></span>
+
                     </div>
                     <div class="col-4">
-                        <strong><span>Le magasinier</span></strong>
+                        <strong><span>Le magasinier <br/><br/></span></strong>
 
                     </div>
                 </div>
+
             </xpath>
 
         </template>
