--- a/qs_pers_inv/views/security.xml
+++ b/qs_pers_inv/views/security.xml
@@ -38,5 +38,16 @@
             <field name="sequence">10</field>
             <field name="web_icon" eval="False"/>
         </record>
+
+        <record id="view_stock_quant_tree_editable_inherited" model="ir.ui.view">
+            <field name="name">stock.view_stock_quant_tree_editable_inherited</field>
+            <field name="model">stock.quant</field>
+            <field name="inherit_id" ref="stock.view_stock_quant_tree_editable"/>
+            <field name="arch" type="xml">
+                <field name="inventory_quantity_auto_apply" position="attributes">
+                    <attribute name="readonly">1</attribute>
+                </field>
+            </field>
+        </record>
     </data>
 </odoo>
