--- a/qs_pers/views/security.xml
+++ b/qs_pers/views/security.xml
@@ -47,5 +47,25 @@
             <field name="sequence">4</field>
             <field name="web_icon" eval="False"/>
         </record>
+        <record id="sale.access_sale_order" model="ir.model.access">
+            <field name="active" eval="True"/>
+            <field name="group_id" ref="sales_team.group_sale_salesman"/>
+            <field name="model_id" ref="sale.model_sale_order"/>
+            <field name="name">sale.order</field>
+            <field name="perm_create" eval="True"/>
+            <field name="perm_read" eval="True"/>
+            <field name="perm_unlink" eval="False"/>
+            <field name="perm_write" eval="False"/>
+        </record>
+        <record id="sale_stock.access_sale_order_stock_worker" model="ir.model.access">
+            <field name="active" eval="True"/>
+            <field name="group_id" ref="stock.group_stock_user"/>
+            <field name="model_id" ref="sale.model_sale_order"/>
+            <field name="name">sale.order stock worker</field>
+            <field name="perm_create" eval="False"/>
+            <field name="perm_read" eval="True"/>
+            <field name="perm_unlink" eval="False"/>
+            <field name="perm_write" eval="False"/>
+        </record>
     </data>
 </odoo>
