--- a/qs_pers_inv/views/views.xml
+++ b/qs_pers_inv/views/views.xml
@@ -25,7 +25,7 @@
             <field name="group_id" ref="stock.group_stock_user"/>
             <field name="model_id" ref="stock.model_stock_picking"/>
             <field name="name">stock.picking user</field>
-            <field name="perm_create" eval="False"/>
+            <field name="perm_create" eval="True"/>
             <field name="perm_read" eval="True"/>
             <field name="perm_unlink" eval="False"/>
             <field name="perm_write" eval="False"/>
@@ -35,7 +35,7 @@
             <field name="group_id" ref="sales_team.group_sale_salesman"/>
             <field name="model_id" ref="stock.model_stock_picking"/>
             <field name="name">stock_picking salesman</field>
-            <field name="perm_create" eval="False"/>
+            <field name="perm_create" eval="True"/>
             <field name="perm_read" eval="True"/>
             <field name="perm_unlink" eval="False"/>
             <field name="perm_write" eval="False"/>
@@ -45,7 +45,7 @@
             <field name="group_id" ref="stock.group_stock_user"/>
             <field name="model_id" ref="stock.model_stock_scrap"/>
             <field name="name">stock.scrap.user</field>
-            <field name="perm_create" eval="False"/>
+            <field name="perm_create" eval="True"/>
             <field name="perm_read" eval="False"/>
             <field name="perm_unlink" eval="False"/>
             <field name="perm_write" eval="False"/>
