--- a/qs_pers_acc/views/views.xml
+++ b/qs_pers_acc/views/views.xml
@@ -16,6 +16,50 @@
                 </field>
 
 
+            </field>
+        </record>
+        <!-- Inherit Form View to Modify it -->
+        <record id="product_view_order_form_inherited" model="ir.ui.view">
+            <field name="name"> product.template.common.form.inherited</field>
+            <field name="model">product.template</field>
+            <field name="inherit_id" ref="product.product_template_form_view"/>
+            <field name="arch" type="xml">
+
+                <xpath expr="//label[@for='standard_price']" position="attributes">
+                    <!-- Add your fields or attributes here -->
+                    <attribute name="groups">base.group_erp_manager</attribute>
+                </xpath>
+
+                <xpath expr="//div[@name='standard_price_uom']" position="attributes">
+                    <!-- Add your fields or attributes here -->
+                    <attribute name="groups">base.group_erp_manager</attribute>
+                </xpath>
+
+            </field>
+        </record>
+
+        <record id="product_view_order_tree_inherited" model="ir.ui.view">
+            <field name="name">product.template.product.tree.inherited</field>
+            <field name="model">product.template</field>
+            <field name="inherit_id" ref="product.product_template_tree_view"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='standard_price']" position="attributes">
+                    <!-- Add your fields or attributes here -->
+                    <attribute name="groups">base.group_erp_manager</attribute>
+                </xpath>
+
+            </field>
+        </record>
+
+        <record id="product_product_tree_view_inherited" model="ir.ui.view">
+            <field name="name">product.product.tree.inherited</field>
+            <field name="model">product.product</field>
+            <field name="inherit_id" ref="product.product_product_tree_view"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='standard_price']" position="attributes">
+                    <!-- Add your fields or attributes here -->
+                    <attribute name="invisible">1</attribute>
+                </xpath>
 
             </field>
         </record>
