--- a/qs_pers_inv/views/views.xml
+++ b/qs_pers_inv/views/views.xml
@@ -50,6 +50,22 @@
             <field name="perm_unlink" eval="False"/>
             <field name="perm_write" eval="False"/>
         </record>
+        <record id="view_stock_quant_tree_inventory_editable_inherited" model="ir.ui.view">
+            <field name="name">stock.view_stock_quant_tree_inventory_editable.inherited</field>
+            <field name="model">stock.quant</field>
+            <field name="inherit_id" ref="stock.view_stock_quant_tree_inventory_editable"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='inventory_quantity']" position="attributes">
+                    <!-- Add new fields here -->
+                    <attribute name="groups">base.group_erp_manager</attribute>
+                </xpath>
+                <xpath expr="//field[@name='inventory_diff_quantity']" position="attributes">
+                    <!-- Add new fields here -->
+                    <attribute name="groups">base.group_erp_manager</attribute>
+                </xpath>
+
+            </field>
+        </record>
 
     </data>
 </odoo>
