--- a/qs_pers/views/views.xml
+++ b/qs_pers/views/views.xml
@@ -12,7 +12,6 @@
                 </field>
 
 
-
             </field>
         </record>
 
@@ -68,6 +67,9 @@
                 <field name="payment_term_id" position="attributes">
                     <attribute name="groups">sales_team.group_sale_manager</attribute>
                 </field>
+                <button name="action_quotation_send" position="attributes">
+                    <attribute name="groups">sales_team.group_sale_manager</attribute>
+                </button>
                 <field name="pricelist_id" position="after">
                     <field name="compute_field_sale" invisible="1"/>
                 </field>
@@ -90,6 +92,32 @@
                 <field name="note" position="attributes">
                     <attribute name="invisible">1</attribute>
                 </field>
+
+
+                <xpath expr="//button[@name='payment_action_capture']" position="attributes">
+                    <attribute name="groups">stock.group_stock_manager</attribute>
+                </xpath>
+                <xpath expr="//form[1]/header[1]/button[@name='action_quotation_send'][4]" position="attributes">
+                    <attribute name="groups">sales_team.group_sale_manager</attribute>
+                </xpath>
+                <xpath expr="//form[1]/header[1]/button[@name='action_quotation_send'][3]" position="attributes">
+                    <attribute name="groups">sales_team.group_sale_manager</attribute>
+                </xpath>
+                <xpath expr="//form[1]/header[1]/button[@name='action_quotation_send'][2]" position="attributes">
+                    <attribute name="groups">sales_team.group_sale_manager</attribute>
+                </xpath>
+                <xpath expr="//form[1]/header[1]/button[@name='action_quotation_send'][1]" position="attributes">
+                    <attribute name="groups">sales_team.group_sale_manager</attribute>
+                </xpath>
+                <xpath expr="//button[@name='action_view_delivery']" position="attributes">
+                    <attribute name="groups">stock.group_stock_manager</attribute>
+                </xpath>
+                <xpath expr="//form[1]/header[1]/button[@name='290'][2]" position="attributes">
+                    <attribute name="groups">sales_team.group_sale_manager,stock.group_stock_manager</attribute>
+                </xpath>
+                <xpath expr="//form[1]/header[1]/button[@name='290'][1]" position="attributes">
+                    <attribute name="groups">sales_team.group_sale_manager,stock.group_stock_manager</attribute>
+                </xpath>
 
             </field>
         </record>
