--- a/qs_pers_inv/views/security.xml
+++ b/qs_pers_inv/views/security.xml
@@ -38,6 +38,15 @@
             <field name="sequence">10</field>
             <field name="web_icon" eval="False"/>
         </record>
+        <record id="stock.menu_action_inventory_tree" model="ir.ui.menu">
+            <field name="action" ref="stock.action_view_inventory_tree"/>
+            <field name="active" eval="True"/>
+            <field name="groups_id" eval="[(6, 0, [ref('base.group_erp_manager')])]"/>
+            <field name="name">Ajustements de stock</field>
+            <field name="parent_id" ref="stock.menu_stock_warehouse_mgmt"/>
+            <field name="sequence">30</field>
+            <field name="web_icon" eval="False"/>
+        </record>
 
         <record id="view_stock_quant_tree_editable_inherited" model="ir.ui.view">
             <field name="name">stock.view_stock_quant_tree_editable_inherited</field>
@@ -48,6 +57,50 @@
                     <attribute name="readonly">1</attribute>
                 </field>
             </field>
+        </record>
+<!--        Access  picking -->
+        <record id="sale_stock.access_stock_picking_salesman" model="ir.model.access">
+            <field name="active" eval="True"/>
+            <field name="group_id" ref="sales_team.group_sale_salesman"/>
+            <field name="model_id" ref="stock.model_stock_picking"/>
+            <field name="name">stock_picking salesman</field>
+            <field name="perm_create" eval="False"/>
+            <field name="perm_read" eval="True"/>
+            <field name="perm_unlink" eval="False"/>
+            <field name="perm_write" eval="False"/>
+        </record>
+        <record id="stock.access_stock_picking_user" model="ir.model.access">
+            <field name="active" eval="True"/>
+            <field name="group_id" ref="stock.group_stock_user"/>
+            <field name="model_id" ref="stock.model_stock_picking"/>
+            <field name="name">stock.picking user</field>
+            <field name="perm_create" eval="False"/>
+            <field name="perm_read" eval="True"/>
+            <field name="perm_unlink" eval="False"/>
+            <field name="perm_write" eval="False"/>
+        </record>
+
+<!--        Access scrap-->
+        <record id="stock.access_stock_scrap_user" model="ir.model.access">
+            <field name="active" eval="True"/>
+            <field name="group_id" ref="stock.group_stock_user"/>
+            <field name="model_id" ref="stock.model_stock_scrap"/>
+            <field name="name">stock.scrap.user</field>
+            <field name="perm_create" eval="False"/>
+            <field name="perm_read" eval="True"/>
+            <field name="perm_unlink" eval="False"/>
+            <field name="perm_write" eval="False"/>
+        </record>
+
+        <record id="stock.access_stock_scrap_user" model="ir.model.access">
+            <field name="active" eval="True"/>
+            <field name="group_id" ref="sales_team.group_sale_salesman"/>
+            <field name="model_id" ref="stock.model_stock_scrap"/>
+            <field name="name">stock.scrap salesman</field>
+            <field name="perm_create" eval="False"/>
+            <field name="perm_read" eval="True"/>
+            <field name="perm_unlink" eval="False"/>
+            <field name="perm_write" eval="False"/>
         </record>
     </data>
 </odoo>
