Magasinier view 290 buton

--- a/qs_pers/views/views.xml
+++ b/qs_pers/views/views.xml
@@ -112,9 +112,9 @@
                 <xpath expr="//button[@name='action_view_delivery']" position="attributes">
                     <attribute name="groups">stock.group_stock_manager</attribute>
                 </xpath>
-                <xpath expr="//form[1]/header[1]/button[@name='290'][2]" position="attributes">
+                <!--<xpath expr="//form[1]/header[1]/button[@name='290'][2]" position="attributes">
                     <attribute name="groups">sales_team.group_sale_manager,stock.group_stock_manager</attribute>
-                </xpath>
+                </xpath>-->
                 <xpath expr="//form[1]/header[1]/button[@name='290'][1]" position="attributes">
                     <attribute name="groups">sales_team.group_sale_manager,stock.group_stock_manager</attribute>
                 </xpath>
