--- a/pos_report_session_summary/views/report_session_summary.xml
+++ b/pos_report_session_summary/views/report_session_summary.xml
@@ -282,20 +282,21 @@
                             </thead>
                             <tbody>
                                 <tr t-foreach="o.order_ids" t-as="statement">
-                                    <t t-set="credit" t-value="False"/>
+                                    <t t-set="check_remise" t-value="False"/>
+                                    <t t-foreach="statement.lines" t-as="value">
 
-                                    <t t-foreach="statement.payment_ids" t-as="value">
-
-                                        <t t-foreach="statement.lines" t-as="value">
-
-                                            <t t-if="value.full_product_name == 'Remise'">
-                                                <t t-set="credit" t-value="True"/>
-                                            </t>
+                                        <t t-if="value.full_product_name == 'Remise'">
+                                            <t t-set="check_remise" t-value="True"/>
                                         </t>
-
-
                                     </t>
-                                    <t t-if="credit">
+
+                                    <!--<t t-foreach="statement.payment_ids" t-as="value">
+
+
+
+
+                                    </t>-->
+                                    <t t-if="check_remise">
                                         <td>
                                             <span t-field="statement.name"/>
                                         </td>
